# mattsite-nuxt

./: .eslintrc.js  .gitignore  .prettierrc  Makefile  README.md  README_old.md  netlify.toml  nuxt.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
assets/css/: main.css
components/: AuthorCard.vue  AuthorIntro.vue  Expertise.vue  ProjectCard.vue  TheFooter.vue  TheHeader.vue  TimeLine.vue  blogItem.vue
data/: menu.js  siteMetaData.js  sitemetainfo.js
layouts/: default.vue
pages/: index.vue  projects.vue
pages/blog/: _slug.vue  index.vue
pages_old/: projects.vue
pages_old/blog/: index.vue
tools/: convert_ico_to_png.py  download_favicons.py  download_icons.py
