[tool.poetry]
name = "favicon-downloader"
version = "0.1.0"
description = "A script to download favicons from websites"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
Pillow = "^10.2.0"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
